--- a/third_demo/MainWindow.ui
+++ b/third_demo/MainWindow.ui
@@ -49,7 +49,7 @@
          </font>
         </property>
         <property name="text">
-         <string>⑦</string>
+         <string>7</string>
         </property>
        </widget>
       </item>
@@ -89,7 +89,7 @@
          </font>
         </property>
         <property name="text">
-         <string>③</string>
+         <string>3</string>
         </property>
        </widget>
       </item>
@@ -125,7 +125,7 @@
          </font>
         </property>
         <property name="text">
-         <string>⑨</string>
+         <string>9</string>
         </property>
        </widget>
       </item>
@@ -143,7 +143,7 @@
          </font>
         </property>
         <property name="text">
-         <string>⑥</string>
+         <string>6</string>
         </property>
        </widget>
       </item>
@@ -215,7 +215,7 @@
          </font>
         </property>
         <property name="text">
-         <string>②</string>
+         <string>2</string>
         </property>
        </widget>
       </item>
@@ -269,7 +269,7 @@
          </font>
         </property>
         <property name="text">
-         <string>⓿</string>
+         <string>0</string>
         </property>
        </widget>
       </item>
@@ -323,7 +323,7 @@
          </font>
         </property>
         <property name="text">
-         <string>④</string>
+         <string>4</string>
         </property>
        </widget>
       </item>
@@ -359,7 +359,7 @@
          </font>
         </property>
         <property name="text">
-         <string>①</string>
+         <string>1</string>
         </property>
        </widget>
       </item>
@@ -413,7 +413,7 @@
          </font>
         </property>
         <property name="text">
-         <string>⑤</string>
+         <string>5</string>
         </property>
        </widget>
       </item>
@@ -455,7 +455,7 @@
        </widget>
       </item>
       <item row="5" column="1">
-       <widget class="QPushButton" name="num8_Btm">
+       <widget class="QPushButton" name="num8_Btn">
         <property name="sizePolicy">
          <sizepolicy hsizetype="Minimum" vsizetype="Preferred">
           <horstretch>0</horstretch>
@@ -468,7 +468,7 @@
          </font>
         </property>
         <property name="text">
-         <string>⑧</string>
+         <string>8</string>
         </property>
        </widget>
       </item>
