--- a/third_demo/MainWindow.ui
+++ b/third_demo/MainWindow.ui
@@ -6,12 +6,15 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>794</width>
+    <width>586</width>
     <height>394</height>
    </rect>
   </property>
   <property name="windowTitle">
-   <string>MainWindow</string>
+   <string>计算器-梁家荣-20212</string>
+  </property>
+  <property name="styleSheet">
+   <string notr="true"/>
   </property>
   <widget class="QWidget" name="centralWidget">
    <layout class="QVBoxLayout" name="verticalLayout">
@@ -199,6 +202,11 @@
         <property name="text">
          <string>=</string>
         </property>
+        <property name="icon">
+         <iconset>
+          <selectedoff>:/MainWindow/self-motivation-online-education-learning-success.png</selectedoff>
+         </iconset>
+        </property>
        </widget>
       </item>
       <item row="7" column="1">
@@ -265,7 +273,7 @@
         </property>
         <property name="font">
          <font>
-          <pointsize>18</pointsize>
+          <pointsize>13</pointsize>
          </font>
         </property>
         <property name="text">
@@ -283,11 +291,11 @@
         </property>
         <property name="font">
          <font>
-          <pointsize>13</pointsize>
+          <pointsize>16</pointsize>
          </font>
         </property>
         <property name="text">
-         <string>➗</string>
+         <string>÷</string>
         </property>
        </widget>
       </item>
@@ -305,7 +313,7 @@
          </font>
         </property>
         <property name="text">
-         <string>✕</string>
+         <string>×</string>
         </property>
        </widget>
       </item>
@@ -391,11 +399,11 @@
         </property>
         <property name="font">
          <font>
-          <pointsize>13</pointsize>
+          <pointsize>17</pointsize>
          </font>
         </property>
         <property name="text">
-         <string>➖</string>
+         <string>-</string>
         </property>
        </widget>
       </item>
@@ -431,7 +439,7 @@
          </font>
         </property>
         <property name="text">
-         <string>➕</string>
+         <string>+</string>
         </property>
        </widget>
       </item>
@@ -499,7 +507,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>794</width>
+     <width>586</width>
      <height>21</height>
     </rect>
    </property>
